<resources>
    <string name="app_name">DIMAS</string>
    <string name="istiqomah_tagline">Belanja mudah, murah, berkah</string>
    <string name="login_caps">LOGIN</string>
    <string name="register_caps">REGISTER</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="information_register">Don\'t have an Account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="information_already_register">Already have an Account?</string>
    <string name="name">Name</string>
    <string name="your_name">Your name</string>
    <string name="your_email">Your email</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="home_address">Home Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="information_forgot">Enter your registered email address.\n We will sent recovery code to your email</string>
    <string name="request_new_password">REQUEST NEW PASSWORD</string>
    <string name="back">Back</string>
    <string name="check_in_your_e_mail">Check in your E-Mail !</string>
    <string name="information_check_email">We just emailed you a link for reset \n your password to:</string>
    <string name="favophs_email">favophs@email.com</string>
    <string name="information_check_email_2">Please check your inbox/spam folder \n email and click on the link to continue</string>
    <string name="admin_email">admin@istiqomah.diraya.co.id</string>
    <string name="information_check_email_3">For any questions or problems \n please email us at:</string>
    <string name="product_name">Telur Ayam Negeri 1Kg</string>
    <string name="hint_number">0</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_rp">Total: Rp</string>
    <string name="edit_profile_caps">EDIT PROFILE</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="payments">Payments</string>
    <string name="back_to_store">Back to Store</string>
    <string name="thank_you">Thank you for your order !</string>
    <string name="information_payment_1">Thank you for shopping at DIMAS, we will prepare your needs soon. Please confirm when contacted by our admin in a few moments.</string>
    <string name="information_payment_2">Please make a payment at the following account: \n \n BNI Syariah - 05577xxxxx a/n DIMAS \n or \n BCA - 0687xxxxxx a/n DIMAS</string>
    <string name="information_payment_3">*Your payment period is until 11.59 p.m. If there is no payment confirmation, the order will be deleted by the system.</string>
    <string name="dimas">DIMAS</string>
    <string name="distributor_masjid">Distributor Masjid</string>
    <string name="cart">Cart</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="notif_number">10</string>
    <string name="welcome">Welcome !</string>
    <string name="rp">Rp.</string>
    <string name="your_cart">Your Cart</string>
    <string name="checkout">Checkout</string>
    <string name="order_products">Order Products</string>
    <string name="payment_details">Payment Details</string>
    <string name="product_prices">Product Prices</string>
    <string name="shipping">Shipping</string>
    <string name="free">Free</string>
    <string name="payment_totals">Payment Totals</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="cash_in_place">Cash (In place)</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="gula_pasir">Gula Pasir Gulaku 15 Kg</string>
    <string name="edit">Edit</string>
    <string name="added">Added</string>
    <string name="xmarks">X</string>
</resources>
