<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_210sdp"
        android:background="@color/colorBlue"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="60dp"
            android:background="@drawable/shape_white_8dp"
            android:elevation="4dp">

            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_40sdp"
                android:contentDescription="@string/distributor_masjid"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui_bold"
                android:layout_gravity="center_horizontal"
                android:text="@string/dimas"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_20ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoe_ui"
                android:text="@string/istiqomah_tagline"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11ssp" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_420sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/shape_white_13dp"
        android:elevation="2dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_ui_bold"
            android:layout_marginTop="10dp"
            android:text="@string/edit_profile_caps"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/name"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:fontFamily="@font/segoe_ui"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:textSize="@dimen/_15ssp"
            android:background="@drawable/shape_white_10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/email"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="125dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:fontFamily="@font/segoe_ui"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/_15ssp"
            android:background="@drawable/shape_white_10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/address"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:fontFamily="@font/segoe_ui"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/home_address"
            android:inputType="text"
            android:textSize="@dimen/_15ssp"
            android:background="@drawable/shape_white_10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="235dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/phone_number"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="255dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:fontFamily="@font/segoe_ui"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textSize="@dimen/_15ssp"
            android:background="@drawable/shape_white_10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/username"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:fontFamily="@font/segoe_ui"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/username"
            android:textSize="@dimen/_15ssp"
            android:text="@string/username"
            android:inputType="textPersonName"
            android:enabled="false"
            android:background="@drawable/shape_white_10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="365dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/new_password"
            android:textAlignment="center"
            android:textSize="@dimen/_13ssp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="385dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:fontFamily="@font/segoe_ui"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textSize="@dimen/_15ssp"
            android:background="@drawable/shape_white_10dp"/>

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_button_1"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/update"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18ssp" />

    </RelativeLayout>

</RelativeLayout>