<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_130sdp"
    android:layout_height="@dimen/_150sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="match_parent"
            android:background="@drawable/shape_white_8dp"
            android:layout_height="@dimen/_60sdp"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/product_name"
            android:src="@drawable/logo"/>

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProduct"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/segoe_ui"
            android:text="Gula Pasir Gulaku 15 Kg Minyak Bimoli"
            android:textSize="@dimen/_10ssp" />

        <TextView
            android:id="@+id/tvrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvProductName"
            android:fontFamily="@font/segoe_ui_bold"
            android:text="@string/rp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="@dimen/_11ssp"/>

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvProductName"
            android:layout_toEndOf="@id/tvrp"
            android:fontFamily="@font/segoe_ui_bold"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/hint_number"
            android:textSize="@dimen/_11ssp"/>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@id/tvrp"
            android:textSize="@dimen/_11ssp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/segoe_ui"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button_1"
            android:text="@string/add_to_cart"
            android:textAlignment="center"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>